# Doppler_Correspondence

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  rviz.rviz
config/: config.yaml
core/: alignment.cpp  alignment.hpp  kdtree_util.cpp  kdtree_util.hpp  math_utils.cpp  math_utils.hpp
example/: example.ipynb  example_gt.txt
example/data/: source.npy  source_dop.npy  target.npy  target_dop.npy
example/data_odom/: frame_001.npy  frame_001_dop.npy  frame_002.npy  frame_002_dop.npy  frame_003.npy  frame_003_dop.npy  frame_004.npy  frame_004_dop.npy  frame_005.npy  frame_005_dop.npy  frame_006.npy  frame_006_dop.npy  frame_007.npy  frame_007_dop.npy  frame_008.npy  frame_008_dop.npy  frame_009.npy  frame_009_dop.npy  frame_010.npy  frame_010_dop.npy  frame_011.npy  frame_011_dop.npy  frame_012.npy  frame_012_dop.npy  frame_013.npy  frame_013_dop.npy  frame_014.npy  frame_014_dop.npy  frame_015.npy  frame_015_dop.npy  frame_016.npy  frame_016_dop.npy  frame_017.npy  frame_017_dop.npy  frame_018.npy  frame_018_dop.npy  frame_019.npy  frame_019_dop.npy  frame_020.npy  frame_020_dop.npy  (+960 more)
launch/: run.launch
pipeline/: correspondence.cpp  correspondence.hpp  icp_doppler.cpp  icp_doppler.hpp  icp_iter.cpp  icp_iter.hpp
ros/: icp_doppler_.cpp  icp_doppler_.hpp  icp_doppler_node.cpp
