<?xml version="1.0"?>
<package format="2">
  <name>Doppler_Correspondence</name>
  <version>0.1.0</version>
  <description>Doppler-assisted ICP open-source module</description>

  <maintainer email="tars0523@unist.ac.kr">Jiwoo Kim</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>libeigen3-dev</build_depend>
  <exec_depend>libeigen3-dev</exec_depend>

  <build_depend>libpcl-dev</build_depend>
  <exec_depend>libpcl-dev</exec_depend>

  <build_depend>libsophus-dev</build_depend>
  <exec_depend>libsophus-dev</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
